# iotca

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  iotca_store.py  main.py  mobile_ai.py  old_server.py  pi_mini_server.py  pyproject.toml  server.py
migrations/: 001_create_tables.sql  002_create_commands_table.sql  003_create_recurring_jobs_table.sql
scripts/: db_create_tables.py  db_run_second_migration.py  db_run_third_migration.py  pi_exporter.py  run_pi_background.sh  stop_pi_background.sh
